<resources>
    <string name="app_name">DogFreinds</string>

    <string name="full_name">Full name: %s %s</string>
    <string name="age">Age: %d</string>
    <string name="birthday">Birthday: %s</string>
    <string name="email">Email: %s</string>
    <string name="last_update">Last update data: %s</string>
    <string name="first_name_hint">First name</string>
    <string name="last_name_hint">Last name</string>
    <string name="age_hint">Age</string>
    <string name="date_of_birth_hint">Date of birth</string>
    <string name="email_hint">Email</string>
    <string name="gender_hint">Gender</string>
    <string name="select_picture_title">Select picture title</string>
    <string name="add_user_title">Add user</string>
    <string name="edit_user_title">Edit user</string>
    <string name="add_new_user_button">Add new user</string>

    <string name="male_title">Male</string>
    <string name="female_title">Female</string>
    <string name="diverse_title">Diverse</string>

    <string name="save_button">Save</string>
    <string name="add_button">Add</string>
</resources>